--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
   <title>About</title>
   <link rel="stylesheet" href="../css/about.css">
   <link rel="icon" href="../fotot/about-icon.jpg">
-  <script src="../bootstrap/js/bootstrap.js" defer></script>
+  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -26,15 +26,22 @@
         <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../index.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link text-dark dropdown-toggle" href="../index.html" data-bs-toggle="dropdown"><i class="fa-solid fa-house"></i> Home </a>
+                <ul class="dropdown-menu">
+                  <li> <a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i> Video </a></li>
+                </ul>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
+                <a class="nav-link text-dark dropdown-toggle" href="../html/about.html" data-bs-toggle="dropdown"><i class="fa-solid fa-user"></i> About </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History </a></li>
+                  <li><a class="dropdown-item" href="../html/table.html"><i class="fa-solid fa-table"></i> Table</a></li>
+                </ul>
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
@@ -48,7 +55,7 @@
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
               </li> 
-              <li ckass="rb-nav-item"> 
+              <li class="rb-nav-item"> 
                 <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
               </li>
             </ul>
