--- a/html/terms.html
+++ b/html/terms.html
@@ -6,10 +6,9 @@
   <title>Terms</title>
   <link rel="stylesheet" href="../css/terms.css">
   <link rel="icon" href="../fotot/terms-icon.jpg">
-  <script src="../js/terms.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <script src="../bootstrap/js/bootstrap.js" defer></script>
+  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
 
@@ -64,6 +63,59 @@
   </header>
   
   <!--Section-->
+  <section id="rb-section">
+    <div class="container">
+      <div class="rb-main">
+        <div class="rb-group">
+          <div class="rb-section-text">
+            <h1>Terms</h1>
+          </div>
+          <div class="rb-content">
+            <div class="rb-box">
+              <h3>Living room</h3>
+              <p>The living room should be comfortable, well-lit, stylishly decorated. Efficient organization and a clear focal point add value.</p>
+            </div>
+            <div class="rb-box">
+              <h3>Kitchen</h3>
+              <p>Designing a functional and suitable kitchen, including sufficient space for food preparation and storage for kitchen appliances.</p>
+            </div>
+            <div class="rb-box">
+              <h3>Bedroom</h3>
+              <p>An ideal bedroom is a serene retreat with a comfortable bed, soft lighting, and personalized decor. Keep it clutter-free, and calming colors, and consider a cozy seating nook for relaxation.</p>
+            </div>
+            <div class="rb-box">
+              <h3>Bathroom</h3>
+              <p>A well-equipped bathroom functionality with comfort. Quality fixtures, smart storage, and something aesthetics create a space that is both efficient and inviting.</p>
+            </div>
+          </div>
+      
+          <div class="rb-group">
+            <div class="rb-section-text">
+             <h1>Arrangements</h1>
+            </div>
+            <div class="rb-content">
+              <div class="rb-box">
+                <h3>Corridors and Common Spaces</h3>
+                <p>Ensure smooth movement and appropriate aesthetics for corridors and common spaces in the home. </p>
+              </div>
+              <div class="rb-box">
+                <h3>Effective Storage</h3>
+                <p>Well-organized storage space to maintain overall order and organization.</p>
+              </div>
+              <div class="rb-box">
+                <h3>Lighting and Ventilation</h3>
+                <p>Lighting to enhance the brightness and ventilation of the home.</p>
+              </div>
+              <div class="rb-box">
+                <h3>Exterior Aesthetics</h3>
+                <p>Attention to the external appearance of th house includes designing facades, landscaping, exterior lighting.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!--Footer-->
   <footer>
@@ -117,7 +169,7 @@
           <div class="row align-items-center">
             <div class="col-xs-12">
               <p>&copy; Copyright 2024 All reserved by
-                <a href="#" class="text-decoration-none text-success"><strong> Rinesa Bislimi</strong></a>
+                <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
               </p>
             </div>
           </div>
@@ -125,7 +177,6 @@
       </div>
     </footer>
   </footer>
-    
   
 </body>
 </html>
