--- a/html/about.html
+++ b/html/about.html
@@ -40,7 +40,7 @@
                 <a class="nav-link text-dark dropdown-toggle" href="../html/about.html" data-bs-toggle="dropdown"><i class="fa-solid fa-user"></i> About </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History </a></li>
-                  <li><a class="dropdown-item" href="../html/table.html"><i class="fa-solid fa-table"></i> Table</a></li>
+                  <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i> Table</a></li>
                 </ul>
               </li>
               <li class="rb-nav-item">
