--- a/html/designers.html
+++ b/html/designers.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
-    <link rel="stylesheet" href="../css/table.css">
+    <link rel="stylesheet" href="../css/designers.css">
     <link rel="icon" href="../fotot/table-icon.jpg">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -18,7 +18,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -64,47 +64,63 @@
   </header>
 
   <!--Section-->
-  <section class="rb-table">
-    <div class="rb-content">
-      <div class="rb-table">
-        <h1>Table</h1>
-        <hr>
-        <table>
-          <thead>
-            <tr>
-              <th> </th>
-              <th>Name</th>
-              <th>Year to start</th>
-              <th>Country</th>
-              <th>Job</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td data-label=""><span>1</span></td>
-              <td data-label="Name"><span>Jeffrey Zeldman</span></td>
-              <td data-label="Age"><span>1995</span></td>
-              <td data-label="Country">New York</td>
-              <td data-label="Job"><span><a href="https://en.wikipedia.org/wiki/Jeffrey_Zeldman" class="rb-job">Web standards project</a></span></td>
-            </tr>
-            <tr>
-              <td data-label="">1</td>
-              <td data-label="">2</td>
-              <td data-label="">3</td>
-              <td data-label="">4</td>
-              <td data-label="">5</td>
-            </tr>
-            <tr>
-              <td data-label="">1</td>
-              <td data-label="">2</td>
-              <td data-label="">3</td>
-              <td data-label="">4</td>
-              <td data-label="">5</td>
-            </tr>
-          </tbody>
-        </table>
+  <section>
+    <h1>Some of the most famous web designers in the world</h1>
+    <hr>
+    <section class="rb-table">
+      <div class="rb-content">
+        <div class="rb-table">
+          <table>
+            <thead>
+              <tr>
+               <th> </th>
+               <th>Name</th>
+               <th>Year to start</th>
+               <th>Country</th>
+               <th>Job</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+               <td data-label=""><span>1</span></td>
+               <td data-label="Name"><span>Jeffrey Zeldman</span></td>
+               <td data-label="Age"><span>1995</span></td>
+               <td data-label="Country"><span>New York</span></td>
+               <td data-label="Job"><span><a href="https://en.wikipedia.org/wiki/Jeffrey_Zeldman" class="rb-job">Web standards project</a></span></td>
+              </tr>
+              <tr>
+               <td data-label=""><span>2</span></td>
+               <td data-label="Name"><span>Chris Coyier</span></td>
+               <td data-label="Age"><span>2022</span></td>
+               <td data-label="Country"><span>USA</span></td>
+               <td data-label="Job"><span><a href="https://www.rankred.com/influential-web-designers/#20_Chris_Coyier" class="rb-job">Platforms like CSS-Tricks and CodePen</a></span></td>
+              </tr>
+              <tr>
+               <td data-label=""><span>3</span></td>
+               <td data-label="Name"><span>Eric A. Meyer</span></td>
+               <td data-label="Age"><span>1992</span></td>
+               <td data-label="Country"><span>United States</span></td>
+               <td data-label="Job"><span><a href="https://en.wikipedia.org/wiki/Eric_A._Meyer" class="rb-job">Hypermedia systems manager at CWRU, joined the Web Standards Project and became a co-founder of CSS</a></span></td>
+              </tr>
+              <tr>
+               <td data-label=""><span>4</span></td>
+               <td data-label="Name"><span>Lotta Nieminen</span></td>
+               <td data-label="Age"><span>1986</span></td>
+               <td data-label="Country"><span>New York</span></td>
+               <td data-label="Job"><span><a href="https://en.wikipedia.org/wiki/Lotta_Nieminen" class="rb-job" >Nieminen is a Finnish-born graphic designer and illustrator</a></span></td>
+              </tr>
+              <tr>
+               <td data-label=""><span>5</span></td>
+               <td data-label="Name"><span>Jen Simmons</span></td>
+               <td data-label="Age"><span>1998</span></td>
+               <td data-label="Country"><span>United States</span></td>
+               <td data-label="Job"><span><a href="https://en.wikipedia.org/wiki/Jen_Simmons" class="rb-job">Is a designer for print pieces and live performance, including projection and lighting design work</a></span></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
+    </section>
   </section>
 
   <!--Footer-->
@@ -113,7 +129,7 @@
       <div class="container text-center text-md-center">
         <div class="row text-center text-md-left">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
@@ -159,7 +175,7 @@
           <div class="row align-items-center">
             <div class="col-xs-12">
               <p>&copy; Copyright 2024 All reserved by
-                <a href="#" class="text-decoration-none text-success"><strong> Rinesa Bislimi</strong></a>
+                <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
               </p>
             </div>
           </div>
